# contaneta

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_Y_MEJORAS.md  API_NOTES.md  AUDITORIA_DB_INIT.md  AUDITORIA_DB_VIEJA_VS_CODIGO.md  AUDITORIA_SQLITE_DIAGNOSTICO.md  AUDIT_COVERAGE_REPORT.md  AUDIT_REPORT.md  AUTH_SETUP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CSRF_AUDIT.md  DECISIONS.md  DEMO_10MIN_NOTES.md  DEPLOY_GUIDE.md  Dockerfile  INSTRUCCIONES_MEJORAS.md  LAUNCH_CHECKLIST.md  MIGRATIONS.md  MOBILE_CHECKLIST.md  OPS_LOGS.md  OPS_RUNBOOK.md  PORTAL_AUDITORIA_MEJORAS.md  QA_MOBILE_SMOKE.md  QA_STEPS.md  README.md  RECOVERY_PLAYBOOK.md  RESUMEN_CHAT_COMPLETO.md  ROLLBACK.md  SECURITY.md  SECURITY_MINIMUM.md  SECURITY_NOTES.md  SELF_SERVE_SAT.md  SELF_SERVE_SAT_NOTES.md  TENANT_SECURITY_AUDIT_FINAL.md  UX_AUDIT_REPORT.md  (+37 more)
_audit_artifacts/: file_index.json
catalogs/: README.md
context/: README.md
deploy/: .env.example.prod  Caddyfile.example  DEPLOY_FILES.md  README_DEPLOY.md  backup.service  backup.timer  bootstrap_ubuntu.sh  conta-invoicing.service  conta-worker.service  logrotate-conta.example  nginx-conta.example.conf
docs/: ACCESSIBILITY.md  ADMIN_OPS.md  ADMIN_OPS_PLAN.md  ADMIN_RUNBOOK.md  ARCHITECTURE.md  ARCH_BACKEND_MAP.md  AUDITORIA_PARA_ANALISIS_IA.md  AUDIT_REPORT.md  AUTH_FLOW.md  BANK_MODULE_FLOW.md  BANK_PREVIEW_FLOW.md  BANK_PREVIEW_PIPELINE.md  BRAND_ICONS.md  CHANGELOG_HARDENING.md  CRON_SETUP.md  CSS_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_VPS.md  DESIGN_SYSTEM_V1.md  DEVELOPER_QUICKSTART.md  FRONTEND_GUIDE.md  (+43 more)
(+911 files in other folders)
