[project]
name = "conta-invoicing"
version = "0.1.0"
description = "ContaNeta — multi-tenant SaaS invoicing platform for Mexican tax compliance (CFDI/SAT)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.ruff]
# Main config lives in ruff.toml at project root.
# This section kept minimal to avoid duplication.
extend = "ruff.toml"
